i18n/zh-CN/docusaurus-plugin-content-docs/current/references/sdk/ethers-ext/v6/account-management/sign-message/role-based-recover-msg.mdx
# Role-based Account Key

import { RoutePath } from '@site/src/common/codesandbox'
import Editor from '@site/src/components/Editor'

<Editor module="/src/pages/ethers-ext-v6/SignMessage/AccountKeyRoleBased.tsx" route={RoutePath.EthersExt_SignMsg_Role} />

**AccountKeyRoleBased** 表示基于角色的密钥。 如果账户有一个**基于账户密钥角色的**对象，且交易类型为**除账户更新外的**，那么验证过程将根据每个角色进行，如下所示：

<CH.Spotlight>
  <CH.Code>
    ```js SignMsgWithRoleBased.js
    const { ethers } = require("ethers");

    const { Wallet } = require("@kaiachain/ethers-ext/v6");

    const senderAddr = "0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea";
    const senderPriv = "0x9ba8cb8f60044058a9e6f815c5c42d3a216f47044c61a1750b6d29ddc7f34bda";
    const senderRoleTransactionPriv = "0xc9668ccd35fc20587aa37a48838b48ccc13cf14dd74c8999dd6a480212d5f7ac";
    const senderRoleAccountUpdatePriv = "0x9ba8cb8f60044058a9e6f815c5c42d3a216f47044c61a1750b6d29ddc7f34bda";
    const senderRoleFeePayerPriv = "0x0e4ca6d38096ad99324de0dde108587e5d7c600165ae4cd6c2462c597458c2b8";

    const provider = new ethers.JsonRpcProvider("https://public-en-kairos.node.kaia.io");
    const txWallet = new Wallet(senderAddr, senderPriv, provider);

    async function main() {
      const msg = "hello";
      const msghex = ethers.hexlify(ethers.toUtf8Bytes(msg));
      const sig = await txWallet.signMessage(msg);
      console.log({ senderAddr, msg, msghex, sig });

      const addr1 = ethers.verifyMessage(msg, sig);
      console.log("recoveredAddr lib", addr1, addr1.toLowerCase() === senderAddr.toLowerCase());

      const addr2 = await provider.send("klay_recoverFromMessage", [senderAddr, msghex, sig, "latest"]);
      console.log("recoveredAddr rpc", addr2, addr2.toLowerCase() === senderAddr.toLowerCase());
    }

    main().catch(console.error);
    ```

    ---

    ```zsh output
    ❯ js SignMsgWithRoleBased.js
    {
      senderAddr: '0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea',
      msg: 'hello',
      msghex: '0x68656c6c6f',
      sig: '0x736460622fcfab0fa7de0ca1cde05178f01b124294a640b5f5820c7271262c6c271f1ad15f0d7b974d68eaac60d5daa1e7dd65301bbfb814beecbca1238b64121c'
    }
    recoveredAddr lib 0x5bD2fb3c21564C023A4A735935a2B7A238C4cCEA true
    recoveredAddr rpc 0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea true
    ```
  </CH.Code>

  ---

  导入 **ethers** 和 **@kaiachain/ethers-ext** 软件包，在 ethers.js 上添加 kaia 功能

  ```js SignMsgWithRoleBased.js focus=1:3
  ```

  ---

  定义发件人的**地址**、**私人密钥**和其他**基于角色的**私人密钥

  ```js SignMsgWithRoleBased.js focus=5:9
  ```

  ---

  使用指定的 **kairos** 测试网 URL 设置提供程序。 以太坊中的提供者是访问区块链数据的只读抽象。

  ```js SignMsgWithRoleBased.js focus=11
  ```

  ---

  此外，您还可以将提供商 URL 从 **kairos** 更改为 **quicknode**

  ```js SignMsgWithRoleBased.js focus=11
  const { ethers } = require("ethers");

  const { Wallet } = require("@kaiachain/ethers-ext/v6");

  const senderAddr = "0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea";
  const senderPriv = "0x9ba8cb8f60044058a9e6f815c5c42d3a216f47044c61a1750b6d29ddc7f34bda";
  const senderRoleTransactionPriv = "0xc9668ccd35fc20587aa37a48838b48ccc13cf14dd74c8999dd6a480212d5f7ac";
  const senderRoleAccountUpdatePriv = "0x9ba8cb8f60044058a9e6f815c5c42d3a216f47044c61a1750b6d29ddc7f34bda";
  const senderRoleFeePayerPriv = "0x0e4ca6d38096ad99324de0dde108587e5d7c600165ae4cd6c2462c597458c2b8";

  const provider = new ethers.JsonRpcProvider("https://public-en-kairos.node.kaia.io");
  const txWallet = new Wallet(senderAddr, senderPriv, provider);

  async function main() {
    const msg = "hello";
    const msghex = ethers.hexlify(ethers.toUtf8Bytes(msg));
    const sig = await txWallet.signMessage(msg);
    console.log({ senderAddr, msg, msghex, sig });

    const addr1 = ethers.verifyMessage(msg, sig);
    console.log("recoveredAddr lib", addr1, addr1.toLowerCase() === senderAddr.toLowerCase());

    const addr2 = await provider.send("klay_recoverFromMessage", [senderAddr, msghex, sig, "latest"]);
    console.log("recoveredAddr rpc", addr2, addr2.toLowerCase() === senderAddr.toLowerCase());
  }

  main().catch(console.error);
  ```

  ---

  用**私钥**和**提供者**创建发件人钱包

  ```js SignMsgWithRoleBased.js focus=12
  ```

  ---

  定义要签名和恢复的信息

  ```js SignMsgWithRoleBased.js focus=15
  ```

  ---

  用发件人的**钱包**签署信息

  <CH.Code>
    ```js SignMsgWithRoleBased.js focus=16:18
    ```

    ---

    ```zsh output
    ❯ js SignMsgWithRoleBased.js
    {
      senderAddr: '0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea',
      msg: 'hello',
      msghex: '0x68656c6c6f',
      sig: '0x736460622fcfab0fa7de0ca1cde05178f01b124294a640b5f5820c7271262c6c271f1ad15f0d7b974d68eaac60d5daa1e7dd65301bbfb814beecbca1238b64121c'
    }
    ```
  </CH.Code>

  ---

  使用 "ethers.verifyMessage "从签名信息中恢复地址

  <CH.Code>
    ```js SignMsgWithRoleBased.js focus=20:21
    ```

    ---

    ```zsh output
    ￭ js SignMsgWithRoleBasedExample.js
    recoveredAddr lib 0x5bD2fb3c21564C023A4A735935a2B7A238C4cCEA true
    ```
  </CH.Code>

  ---

  使用 `klay_recoverFromMessage` 从已签名的信息中恢复地址

  <CH.Code>
    ```js SignMsgWithRoleBased.js focus=23:24
    ```

    ---

    ```zsh output
    ➤ js SignMsgWithRoleBasedExample.js
    recoveredAddr rpc 0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea true
    ```
  </CH.Code>
</CH.Spotlight>
